--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Todo App</title>
   </head>
-  <body>
+  <body class="bg-emerald-500">
     <div id="root"></div>
   </body>
 </html>
